--- a/one/css/comum.css
+++ b/one/css/comum.css
@@ -71,4 +71,22 @@ th{
             height: 25%;
             position: 50% 50%;
         }
+        a{
+         text-decoration: none;
+         color: black;   
+        }
+        .lapis{
+            width: 18%;
+            height: 6%;
+        }
+        .lixeira{
+            width: 25%;
+            height: 7%;
+        }
+         .lixeiras{
+            width: 58%;
+            height: 7%;
+        }
+        
+        
         
