--- a/one/css/comum.css
+++ b/one/css/comum.css
@@ -49,44 +49,62 @@ footer{
     border-collapse: collapse;
 }
 th{
-            text-align: center;
-            width: 25%;
-            height: 25%;
-            border: 3px solid black;
-            font-size: 20px;
-            font-family: Calibri;
-            font-weight: bold;
-            background-color: #00e4e1;
-        }
-        td{
-            text-align: center;
-            width: 25%;
-            height: 25%;
-            border: 1px solid black;
-            font-size: 15px;
-            font-family: Arial;         
-        }
-        .imgh{
-            width: 25%;
-            height: 25%;
-            position: 50% 50%;
-        }
-        a{
-         text-decoration: none;
-         color: black;   
-        }
-        .lapis{
-            width: 18%;
-            height: 6%;
-        }
-        .lixeira{
-            width: 25%;
-            height: 7%;
-        }
-         .lixeiras{
-            width: 58%;
-            height: 7%;
-        }
-        
-        
-        
+    text-align: center;
+    width: 25%;
+    height: 25%;
+    border: 3px solid black;
+    font-size: 20px;
+    font-family: Calibri;
+    font-weight: bold;
+    background-color: #00e4e1;
+}
+ td{
+    text-align: center;
+    width: 25%;
+    height: 25%;
+    border: 1px solid black;
+    font-size: 15px;
+    font-family: Arial;         
+}
+.imgh{
+    width: 25%;
+    height: 25%;
+    position: 50% 50%;
+}
+a{
+    text-decoration: none;
+    color: black;   
+}
+.lapis{
+    width: 18%;
+    height: 6%;
+      }
+.lixeira{
+    width: 25%;
+    height: 7%;
+}
+.lixeiras{
+    width: 58%;
+    height: 7%;
+}
+/*.usu{
+    position: absolute;
+    padding: 10px 48px;
+    margin: 16px 0px;
+    color: white;
+    text-transform: uppercase;
+    text-align:center;
+}*/
+.usua{
+    width: 7%;
+    position: absolute;
+    padding: 0px 0px;
+    margin: 10px 40px;
+    text-transform: uppercase;
+    color: white;
+}  
+.imgu{
+    width: 35px;
+    height: 35px;
+    
+}
