--- a/one/login/css/login.css
+++ b/one/login/css/login.css
@@ -4,11 +4,12 @@ html,body {
   font-weight: 300;
 }
 .hero.is-success {
-  background: #f2f7fa;
+  	background-color: #6CC0D1;
 }
 .hero .nav, .hero.is-success .nav {
   -webkit-box-shadow: none;
   box-shadow: none;
+
 }
 input {
   font-weight: 300;
